--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server",
-    "build": "NODE_ENV=production webpack -p",
+    "build": "NODE_ENV=production webpack -p --config ./webpack.production.config.js",
     "webpack": "webpack"
   },
   "repository": {
